# volumen

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml  package.json  pnpm-lock.yaml  turbo.json
.agents/artifacts/: comments-issue.md
.agents/artifacts/whitespace-tests/: test_ruby.rb
.agents/plans/: heredoc-whitespace-stripping.md  parsers-unification.md  tree-sitter-grammar-wasm.md
.agents/prompts/: 2025-12-27 0415.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: bootstrap-dirs.sh  initialize.sh  on-create.sh  on-update.sh  post-start.sh
pkgs/benchmarks/: Cargo.toml  token_counts.json
pkgs/benchmarks/benches/: csharp_parsers.rs  go_parsers.rs  java_parsers.rs  php_parsers.rs  python_parsers.rs  ruby_parsers.rs  typescript_parsers.rs
pkgs/benchmarks/src/: lib.rs
pkgs/crate/: Cargo.toml  README.md  package.json  turbo.json
pkgs/crate/src/: lib.rs
pkgs/npm/: README.md  package.json  turbo.json
pkgs/parser/: Cargo.toml  README.md  package.json
pkgs/parser-core/: Cargo.toml  README.md  package.json
pkgs/parser-core/src/: annotation.rs  comment.rs  lib.rs  test.rs  trait.rs
pkgs/parser-cs/: Cargo.toml
pkgs/parser-cs/src/: comments.rs  lib.rs  scope.rs  spans.rs
pkgs/parser-csharp/: Cargo.toml
pkgs/parser-csharp/src/: lib.rs  spans.rs
pkgs/parser-go/: Cargo.toml
pkgs/parser-go/src/: lib.rs  scope.rs  spans.rs
pkgs/parser-java/: Cargo.toml
pkgs/parser-java/src/: comments.rs  lib.rs  spans.rs
pkgs/parser-php/: Cargo.toml
pkgs/parser-php/src/: comments.rs  lib.rs  spans.rs
pkgs/parser-py/: Cargo.toml  README.md  package.json  turbo.json
pkgs/parser-py-ruff/: Cargo.toml  README.md  package.json
pkgs/parser-py-ruff/src/: lib.rs
pkgs/parser-py-tree-sitter/: Cargo.toml  README.md  package.json
pkgs/parser-py-tree-sitter/src/: comments.rs  lib.rs  queries.rs  scope.rs  spans.rs
pkgs/parser-py-tree-sitter/tests/: comparison_test.rs
pkgs/parser-py/src/: lib.rs
pkgs/parser-rb/: Cargo.toml
pkgs/parser-rb/src/: comments.rs  lib.rs  scope.rs  spans.rs
pkgs/parser-test/: Cargo.toml  README.md  package.json
pkgs/parser-test/src/: lib.rs
pkgs/parser-tests/: Cargo.toml  README.md  package.json
pkgs/parser-tests/docs/: matrix.md
pkgs/parser-tests/tests/: 01_var_name_cs.rs  01_var_name_go.rs  01_var_name_java.rs  01_var_name_php.rs  01_var_name_py.rs  01_var_name_rb.rs  01_var_name_ts.rs  02_prompt_vars_py.rs  02_prompt_vars_ts.rs  02_var_comment_cs.rs  (+69 more)
pkgs/parser-ts/: Cargo.toml  README.md  package.json  turbo.json
pkgs/parser-ts-tree-sitter/: Cargo.toml
pkgs/types/: genotype.toml  package.json  turbo.json
pkgs/types-crate/: Cargo.toml  README.md  turbo.json
pkgs/types-npm/: README.md  package.json  turbo.json
pkgs/wasm/: Cargo.toml  package.json  turbo.json
scripts/: publish.sh  version.sh
(+18 files in other folders)
