[workspace]
resolver = "2"
members = [
  "pkgs/crate",
  "pkgs/types-crate",
  "pkgs/wasm",
  "pkgs/parser",
  "pkgs/parser-core",
  "pkgs/parser-ts",
  "pkgs/parser-ts-tree-sitter",
  "pkgs/parser-py",
  "pkgs/parser-py-ruff",
  "pkgs/parser-py-tree-sitter",
  "pkgs/parser-rb",
  "pkgs/parser-php",
  "pkgs/parser-java",
  "pkgs/parser-go",
  "pkgs/parser-csharp",
  "pkgs/parser-test",
  "pkgs/parser-tests",
  "pkgs/benchmarks",
]

[profile.test]
# Wasm tests fail with ``, so we enable size optimization for tests, to
# workaround the issue. See: https://github.com/wasm-bindgen/wasm-bindgen/issues/3451#issuecomment-1562982835
opt-level = "s"

[profile.bench]
opt-level = 3
lto = true
